crates/harnizator-tui/tests/snapshots/graph__graph_screen_five_nodes.snap
---
source: crates/harnizator-tui/tests/graph.rs
expression: "render(&s, 80, 24)"
---
" harnizator │ m │ only-flagged │ ↑0 ↓0       Enter envia · Tab telas · F3 ajuda "
"┌ agentes (setas/hjkl navega · Enter chat · m msg · i injeta · x interrompe) ──┐"
"│                                                                              │"
"│                                ┌────────────┐                                │"
"│                                │● root      │                                │"
"│                                └────────────┘                                │"
"│                                       │                                      │"
"│┌────────────┐                                                  ┌────────────┐│"
"││● research  │                                                  │○ code      ││"
"│└────────────┘                                                  └────────────┘│"
"│       │                                                                      │"
"│┌────────────┐                                                  ┌────────────┐│"
"││✓ fetch     │                                                  │■ sum       ││"
"│└────────────┘                                                  └────────────┘│"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌input─────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
