crates/harnizator-tui/tests/snapshots/graph__inject_mode_shows_target_in_input_title.snap
---
source: crates/harnizator-tui/tests/graph.rs
expression: "render(&s, 80, 24)"
---
" harnizator │ m │ only-flagged │ ↑0 ↓0       Enter envia · Tab telas · F3 ajuda "
"[sys]                                                                           "
"Harnizator — Enter envia · Esc cancela geração · Ctrl+C sai                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌inject contexto → a───────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
